<resources>
    <string name="app_name">Image Machine</string>

    <string name="remove_caps">REMOVE</string>
    <string name="edit_caps">EDIT</string>
    <string name="machine_image_caps">MACHINE IMAGE</string>
    <string name="machine_data_detail_caps">MACHINE DATA DETAIL</string>
    <string name="scan_qr_caps">SCAN QR</string>
    <string name="pick_date_caps">PICK DATE</string>
    <string name="last_maintained_date">Last Maintained Date</string>
    <string name="machine_qr_number">Machine QR Number</string>
    <string name="machine_type">Machine Type</string>
    <string name="machine_name">Machine Name</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_type">Sort By Type</string>
    <string name="delete_image_caps">DELETE IMAGE</string>
    <string name="last_maintained_date_caps">LAST MAINTAINED DATE</string>
    <string name="id_caps">ID</string>
    <string name="name_caps">NAME</string>
    <string name="type_caps">TYPE</string>
    <string name="qr_number_caps">QR NUMBER</string>
</resources>
